--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.2.1",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
@@ -53,6 +54,7 @@
   },
   "types": "./dist/index.d.ts",
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "express": "^4.18.2"
   }
 }
